--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,7 @@ services:
       - "3010:3000"
     environment:
       - NODE_ENV=production
-    volumes:
-      - /app/node_modules
+    # Removing volume mount temporarily for debugging
     healthcheck:
       test: ["CMD", "wget", "--spider", "-q", "http://localhost:3000"]
       interval: 30s
