--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "CCXT API service for cryptocurrency trading",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "build:css": "postcss ./public/assets/tailwind.css -o ./public/assets/index-tailwind.css",
+    "start": "npm run build:css && node index.js",
+    "dev": "postcss ./public/assets/tailwind.css -o ./public/assets/index-tailwind.css --watch"
   },
   "dependencies": {
     "axios": "^1.8.4",
     "ccxt": "^4.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "postcss-cli": "^10.1.0",
+    "tailwindcss": "^3.3.3"
   }
 }
