--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "CCXT API service for cryptocurrency trading",
   "main": "index.js",
   "scripts": {
-    "build:css": "postcss ./public/assets/tailwind.css -o ./public/assets/index-tailwind.css",
+    "build:css": "tailwindcss -i ./public/assets/tailwind.css -o ./public/assets/index-tailwind.css",
     "start": "npm run build:css && node index.js",
-    "dev": "postcss ./public/assets/tailwind.css -o ./public/assets/index-tailwind.css --watch"
+    "dev": "tailwindcss -i ./public/assets/tailwind.css -o ./public/assets/index-tailwind.css --watch"
   },
   "dependencies": {
     "axios": "^1.8.4",
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "postcss-cli": "^10.1.0",
+    "postcss-import": "^15.1.0",
     "tailwindcss": "^3.3.3"
   }
 }
