--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "ccxt-api",
+  "name": "zifei-panel",
   "version": "1.0.0",
-  "description": "CCXT API service for cryptocurrency trading",
+  "description": "交易套利监控面板",
   "main": "index.js",
   "scripts": {
-    "build:css": "tailwindcss -i ./public/assets/tailwind.css -o ./public/assets/index-tailwind.css",
-    "start": "npm run build:css && node index.js",
-    "dev": "tailwindcss -i ./public/assets/tailwind.css -o ./public/assets/index-tailwind.css --watch"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "axios": "^1.8.4",
-    "ccxt": "^4.2.0",
+    "axios": "^1.6.0",
+    "ccxt": "^4.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27",
-    "postcss-cli": "^10.1.0",
-    "postcss-import": "^15.1.0",
-    "tailwindcss": "^3.3.3"
+    "nodemon": "^3.0.1"
   }
 }
